# stable-flow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  VERSION  debug_config.py  debug_template.py  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/: configuration-reference.md  customization-guide.md  development-guide.md  getting-started.md  process-engine.md  template-development.md  testing-guide.md  tier-guide.md  troubleshooting.md
examples/: README.md  advanced-project-config.yaml  core-project-config.yaml  minimal-project-config.yaml
scripts/: dev-setup.ps1  process_templates.py  stable-flow
templates/: adr-template.md  development-guide-template.md  features-csv-template.csv  prd-template.md  technical-design-template.md
templates/advanced/: adr-template.md  agile-methodology-selection-guide.md  api-design-evolution-tracker-template.md  incident-response-template.md  kanban-board-setup-template.md  kanban-metrics-template.md  performance-optimization-tracker-template.md  product-owner-guide-template.md  scrum-master-guide-template.md  sprint-kanban-hybrid-template.md  sprint-retrospective-template.md
templates/config/: project-config-template.yaml
templates/core/: development-guide-template.md  features-csv-template.csv  master-index-template.md  prd-template.md  sprint-planning-template.md  sprint-template.md  technical-design-template.md
templates/operations/: data-migration-template.md
templates/source/: development-guide-template.md  features-csv-template.csv  master-index-template.md  prd-template.md  security-audit-compliance-tracker-template.md  sprint-planning-template.md  sprint-template.md  technical-debt-management-tracker-template.md  technical-design-template.md
